cmake_minimum_required(VERSION 3.5)

project(TMP LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Core REQUIRED)

file(GLOB SOURCE_FILES
    "${PROJECT_SOURCE_DIR}/*.cpp"
    "${PROJECT_SOURCE_DIR}/*.hpp")

add_library(TMP SHARED ${SOURCE_FILES})

target_link_libraries(TMP PRIVATE Qt5::Core)

target_compile_definitions(TMP PRIVATE TMP_LIBRARY)
